Third commit of ShinyPres

--- a/ShinyPres.html
+++ b/ShinyPres.html
@@ -794,15 +794,20 @@ hljs.initHighlightingOnLoad();
 <section data-transition="linear" data-transition-speed="default">
 <h3>First Slide</h3>
 <div class="slideContent" >
-<p>Animated list</p>
+<p>This project developed a Shiny app which allows the user
+to predict the price of a diamond from the R <code>diamonds</code>
+data set.</p>
 
-<blockquote>
-<ol>
-<li>Point 1</li>
-<li>Point 2</li>
-<li>Point 3</li>
-</ol>
-</blockquote>
+<p>There are options in the Shiny app where the user can
+select the weight (carat) as the input parameter. The 
+prediction is based on carats. In addition, the app
+has pulldown menus for diamond cut and diamond color.
+These allow a comparison of how the predicted value
+of the diamond changes based on these parameters.</p>
+
+<p>The shiny app can be found at:</p>
+
+<p><a href="https://jkahtava.shinyapps.io/devdataproductsprojthree/">https://jkahtava.shinyapps.io/devdataproductsprojthree/</a></p>
 
 </div>
 
